K4K8S+AWSAppMesh/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
  labels:
    mesh: dj-app
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
