K4K8S+AWSAppMesh/fqdn-service-routing.yaml
apiVersion: v1
kind: Service
metadata:
  name: jazz
  namespace: prod
  annotations:
    configuration.konghq.com: fqdn-jazz
    ingress.kubernetes.io/service-upstream: "true"
  labels:
    app: jazz
    kong: "true"
spec:
  ports:
  - port: 9080
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: metal
  namespace: prod
  annotations:
    configuration.konghq.com: fqdn-metal
    ingress.kubernetes.io/service-upstream: "true"
  labels:
    app: metal
    kong: "true"
spec:
  ports:
  - port: 9080
    name: http
---
